[project]
name = "omahaunderground"
version = "1.1.1"
description = "Omaha Underground - A rebuild of planetplum.net with chat, band pages, user profiles, and community features"
readme = "README.md"
requires-python = ">=3.13"
authors = [
    { name = "Matt James", email = "aspc.james2@gmail.com"}
]
maintainers = [
  { name = "Matt James", email = "aspc.james2@gmail.com"}
]
license = { text = "MIT" }

dependencies = [
    "asgiref==3.8.1",
    "attrs==24.2.0",
    "autobahn==24.4.2",
    "Automat==24.8.1",
    "beautifulsoup4==4.14.2",
    "boto3==1.38.22",
    "botocore==1.38.22",
    "cffi==1.17.1",
    "constantly==23.10.4",
    "cryptography==43.0.3",
    "Django==5.1.2",
    "django-colorfield==0.11.0",
    "django-environ==0.12.0",
    "django-extensions>=3.2.3",
    "django-storages==1.14.6",
    "django-tz-detect==0.5.0",
    "gunicorn==23.0.0",
    "hyperlink==21.0.0",
    "idna==3.10",
    "incremental==24.7.2",
    "jmespath==1.0.1",
    "packaging==25.0",
    "pillow==10.4.0",
    "psycopg[binary]>=3.3.4",
    "pyasn1==0.6.1",
    "pyasn1_modules==0.4.1",
    "pycparser==2.22",
    "pyOpenSSL==24.2.1",
    "python-dateutil==2.9.0.post0",
    "pytz==2025.2",
    "s3transfer==0.13.0",
    "service-identity==24.2.0",
    "six==1.17.0",
    "soupsieve==2.8",
    "sqlparse==0.5.1",
    "tornado==6.4.1",
    "Twisted==24.10.0",
    "txaio==23.1.1",
    "typing_extensions==4.12.2",
    "tzdata==2024.2",
    "urllib3==2.4.0",
    "whitenoise==6.7.0",
    "zope.interface==7.1.1",
]

[project.urls]
Repository = "https://github.com/Mjames951/OmahaUnderground"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["planetapplication", "planetplum", "users", "chat"]

[dependency-groups]
dev = []
